--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "@eslint/eslintrc": "^3"
+  },
+  "volta": {
+    "node": "21.7.3",
+    "npm": "10.9.2"
   }
 }
