--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "format": "npm run lint:fix",
+    "format": "npm run lint:fix && npm run prettier",
+    "prettier": "prettier --write .",
     "prepare": "husky",
     "commitlint": "commitlint --edit"
   },
@@ -26,6 +27,11 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
