--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.7",
     "postcss": "^8",
+    "server-only": "^0.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
