--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
