feat: add survey management features with routing and validation logic

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,6 +7,9 @@
       "@typeslib/*": ["./libs/types/*"],
       "@fonts/*": ["./libs/fonts/*"],
       "@constants/*": ["./libs/constants/*"],
+      "@components/*": ["./libs/components/*"],
+      "@enums/*": ["./libs/enums/*"],
+      "@mock/*": ["./libs/mock/*"],
       "@/*": ["./*"]
     }
   }
