feat: implement page builder with dynamic routing for multiple page types

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -10,6 +10,7 @@
       "@components/*": ["./libs/components/*"],
       "@enums/*": ["./libs/enums/*"],
       "@mock/*": ["./libs/mock/*"],
+      "@page-builder/*": ["./libs/page-builder/*"],
       "@/*": ["./*"]
     }
   }
