--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,13 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "temp.js"
+  ],
   "exclude": ["node_modules"],
   "extends": "./tsconfig.paths.json"
 }
