--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
