refactor: reorganize survey component imports and enhance literal handling in survey texts

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -15,6 +15,7 @@
       "@hooks/*": ["./libs/hooks/*"],
       "@providers/*": ["./libs/providers/*"],
       "@services/*": ["./libs/services/*"],
+      "@regex/*": ["./libs/regex/*"],
       "@/*": ["./*"]
     }
   }
