feat: add skeleton components for loading states and refactor survey page types

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -16,6 +16,7 @@
       "@providers/*": ["./libs/providers/*"],
       "@services/*": ["./libs/services/*"],
       "@regex/*": ["./libs/regex/*"],
+      "@hoc/*": ["./libs/hoc/*"],
       "@/*": ["./*"]
     }
   }
