feat: implement middleware chaining and survey guard for request handling

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -17,6 +17,7 @@
       "@services/*": ["./libs/services/*"],
       "@regex/*": ["./libs/regex/*"],
       "@hoc/*": ["./libs/hoc/*"],
+      "@middleware/*": ["./libs/middleware/*"],
       "@/*": ["./*"]
     }
   }
